nav bar shows correct tabs on iech page, hiding the link to current tab

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -269,7 +269,7 @@ border-color: green;
   border-color: red;*/
   background: transparent;
   background-size: cover;
-  height: 100%;
+  height: 100em;
   width: 100%;
   position: absolute;
   overflow: hidden;
@@ -280,7 +280,7 @@ border-color: green;
   position: absolute;
   z-index: -1;
   opacity: 0.78;
-  height: 100%;
+  height: 50em;
   width: 100%;
   object-fit: cover;
 }
